syntax = "proto3";

package pay;

option go_package = "github.com/yb2020/odoc-proto/gen/go/pay";

// @api_path: /api/pay/stripe-checkout/create-session
// @method: POST
// @summary: 创建 Stripe Checkout Session
message CreateCheckoutSessionReq {
    string orderId = 1;
}

message CreateCheckoutSessionResp {
    string sessionId = 1;
}
    

// @api_path: /api/pay/stripe/get-publishable-key
// @method: GET
// @summary: 获取 Stripe Publishable Key
message GetStripePublishableKeyReq {
}

message GetStripePublishableKeyResp {
    string publishableKey = 1; // Stripe Publishable Key
}
    